--- a/src/components/Activities/Activity.css
+++ b/src/components/Activities/Activity.css
@@ -3,7 +3,7 @@
     text-transform: uppercase;
     color:  #e67e22;
     margin-top: 2rem;
-    font-size: 1.5re;
+    font-size: 1.5rem;
 }
 .top-activity{
     text-align: center;
