--- a/src/components/Destination/Destination.css
+++ b/src/components/Destination/Destination.css
@@ -28,6 +28,13 @@ margin: 0px 10rem;
 }
 
 @media only screen and (min-width:2000px){
+  
+    .places{
+        padding-left: 2.5rem;
+        
+        
+        
+    }
     .destination-section{
        margin-top: 2rem;
     }
